--- a/source/blog_posts/2013-12-18-twelve-days-2013-sensor-fusion.html.markdown.erb
+++ b/source/blog_posts/2013-12-18-twelve-days-2013-sensor-fusion.html.markdown.erb
@@ -97,7 +97,7 @@ est.rmsd <- c(rmsd(path, state.est),
 
 Plotting the first 50 data points gives:
 
-![Kalman Tracking Errors](2013-12-18-twelve-days-2013-sensor-fusion/kalman_tracking.png)
+<%= image_tag webpack_image_path('2013-12-18-twelve-days-2013-sensor-fusion/kalman_tracking.png'), alt: 'Kalman Tracking Errors' %>
 
 It's a little hard to tell what's going on but you can probably squint and see that the fusion sensor is tracking the best, and that sensor three (the highest variance one) is tracking the worst. Computing the [RMSD](https://en.wikipedia.org/wiki/Root-mean-square_deviation) gives:
 
