--- a/source/visualizations/index.html.erb
+++ b/source/visualizations/index.html.erb
@@ -7,20 +7,20 @@ layout: site_page
 
 <% page_articles.each_slice(3) do |visualizations| %>
 <div class="row">
-	<% visualizations.each do |visualization| %>
-		<div class="col-sm-12 col-md-4">
-			<div class="thumbnail">
-				<% link_to visualization do %>
-					<%= image_tag vis_preview(visualization),
-					    alt: visualization.data['description'] %>
-				<% end %>		
-				<div class="caption">
-					<h3><%= visualization.title %></h3>
-					<p><%= visualization.data['description'] %></p>
-				</div>
-			</div>
-		</div>
-	<% end %>
+  <% visualizations.each do |visualization| %>
+    <div class="col-sm-12 col-md-4">
+      <div class="thumbnail">
+        <% link_to visualization do %>
+          <%= image_tag webpack_image_path(vis_preview(visualization)),
+              alt: visualization.data['description'] %>
+        <% end %>   
+        <div class="caption">
+          <h3><%= visualization.title %></h3>
+          <p><%= visualization.data['description'] %></p>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
 <% end %>
 
