Title and description cleanup

--- a/source/about.html.markdown.erb
+++ b/source/about.html.markdown.erb
@@ -2,6 +2,8 @@
 pageable: false
 blog: blog
 layout: simple_page
+title: About
+description: An about page for Kelly Littlepage and the Misapplied Math blog
 ---
 
 <div class="container">
