--- a/source/blog_posts/2013-08-12-hacking-an-nfl-survivor-pool-for-fun-and-profit.html.markdown.erb
+++ b/source/blog_posts/2013-08-12-hacking-an-nfl-survivor-pool-for-fun-and-profit.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2013-08-12 17:57
 comments: true
 tags: Statistics, Optimization, Sports Betting, R
 keywords: "NFL survival pool, data science, statistics, optimization, sports betting"
-description: Quantitative sports betting via optimization
+description: Quantitative sports betting (NFL survivor pools) via combinatorial optimization
 ---
 
 ## The Game
