--- a/source/blog_posts/2013-10-05-visualization-is-everything.html.markdown.erb
+++ b/source/blog_posts/2013-10-05-visualization-is-everything.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2013-10-05 15:11
 comments: true
 tags: Data Science, Visualizations, Trading
 keywords: "Data science, d3.js, ggplot, visualization, data manipulation, exploratory data analysis"
-description: "Introducing the new data visualization gallery"
+description: "Introducing the new Misapplied Math data visualization gallery"
 ---
 
 ## And with that in mind...
