--- a/source/blog_posts/2013-10-09-the-geometry-of-signal-extraction.html.markdown.erb
+++ b/source/blog_posts/2013-10-09-the-geometry-of-signal-extraction.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2013-10-09 12:44
 comments: true
 tags: Statistics
 keywords: "signal extraction, gaussian, mixture model, regression, geometric interpretation"
-description: A geometric interpretation of a classic signal extraction problem.
+description: A geometric interpretation of a classic signal extraction problem
 ---
 
 ## Teasing out the Signal
