--- a/source/blog_posts/2013-12-13-twelve-days-2013-discrete-sampling.html.markdown.erb
+++ b/source/blog_posts/2013-12-13-twelve-days-2013-discrete-sampling.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2013-12-13 15:29
 comments: true
 tags: CS, Statistics
 keywords: "table method alias method random sampling discrete distribution"
-description: "Efficient methods for sampling from a discrete distribution and generating random variables."
+description: "Efficient methods for sampling from a discrete distribution and generating random variables"
 ---
 
 ## Day Two: Discrete Random Variable Generation and The Table Method
