--- a/source/blog_posts/2013-12-16-twelve-days-2013-subsequence-search-and-alignment.html.markdown.erb
+++ b/source/blog_posts/2013-12-16-twelve-days-2013-subsequence-search-and-alignment.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2013-12-16 18:33
 comments: true
 tags: CS, Data Science
 keywords: "dynamic programming Smith–Waterman sequence alignment similarity score BLAST tail recursion egg drop problem"
-description: "Applications of dynamic programming to computationally difficult problems, with DNA sequence alignment as a motivator."
+description: "Applications of dynamic programming to computationally difficult problems, with DNA sequence alignment as a motivator"
 ---
 
 ## Day Five: Smith–Waterman for Subsequence Search and Alignment
