--- a/source/blog_posts/2013-12-18-twelve-days-2013-sensor-fusion.html.markdown.erb
+++ b/source/blog_posts/2013-12-18-twelve-days-2013-sensor-fusion.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2013-12-18 12:30
 comments: true
 tags: Statistics, Probability, R
 keywords: "sensor fusion combined optimal estimates kalman filter"
-description: "Combining multiple noisy sensors for optimal state estimation."
+description: "Combining multiple noisy sensors for optimal state estimation"
 ---
 
 ## Day Seven: Sensor Fusion
