--- a/source/blog_posts/2013-12-20-twelve-days-2013-side-channel-and-timing-attacks.html.markdown.erb
+++ b/source/blog_posts/2013-12-20-twelve-days-2013-side-channel-and-timing-attacks.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2013-12-20 19:09
 comments: true
 tags: CS
 keywords: "hash collisions timing attack side channel network hash table layer 7 attack"
-description: "A brief overview of timing attacks and their potential impacts."
+description: "A brief overview of timing attacks and their potential impacts"
 ---
 
 ## Day Nine: Side Channel and Timing Attacks
