--- a/source/blog_posts/2013-12-22-twelve-days-2013-shunting-yard-algorithm.html.markdown.erb
+++ b/source/blog_posts/2013-12-22-twelve-days-2013-shunting-yard-algorithm.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2013-12-22 22:27
 comments: true
 tags: CS
 keywords: "Shunting-Yard RPN Reverse Polish Notation abstract syntax tree AST parsing LL(1) scripting language design"
-description: "A brief tutorial on using the the Shunting-Yard algorithm to parse a simple grammar and generate an abstract syntax tree."
+description: "A brief tutorial on using the the Shunting-Yard algorithm to parse a simple grammar and generate an abstract syntax tree"
 ---
 
 ## Day Eleven: The Shunting-Yard Algorithm
