--- a/source/blog_posts/2013-12-23-twelve-days-2013-the-bellman-ford-algorithm.html.markdown.erb
+++ b/source/blog_posts/2013-12-23-twelve-days-2013-the-bellman-ford-algorithm.html.markdown.erb
@@ -3,8 +3,8 @@ title: "Twelve Days 2013: The Bellman-Ford Algorithm"
 date: 2013-12-23 21:57
 comments: true
 tags: CS
-keywords: "Bellman-Ford negative cycle shortest path graph algorithm DFS depth first search."
-description: "An introduction to the Bellman-Ford algorithm."
+keywords: "Bellman-Ford negative cycle shortest path graph algorithm DFS depth first search"
+description: "An introduction to the Bellman-Ford algorithm for finding the shortest path in a graph with (possibly) negative weights"
 ---
 
 ## Day Twelve: The Bellman-Ford Algorithm
