--- a/source/blog_posts/2014-01-08-testing-collections-with-guava-testlib-and-junit-4.html.markdown.erb
+++ b/source/blog_posts/2014-01-08-testing-collections-with-guava-testlib-and-junit-4.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2014-01-08 08:18
 comments: true
 tags: CS
 keywords: "guava-testlib JUnit 4 java collections unit testing"
-description: "Using guava-testlib with JUnit 4"
+description: "Using guava-testlib with JUnit 4 to test custom collection classes"
 ---
 
 ## Testing Custom Java Collections
