--- a/source/categories.html.erb
+++ b/source/categories.html.erb
@@ -2,6 +2,8 @@
 pageable: false
 blog: blog
 layout: site_page
+title: Categories
+description: Misapplied Math content indexed by category tags
 ---
 
 <div class="jumbotron">
