--- a/source/visualizations/index.html.erb
+++ b/source/visualizations/index.html.erb
@@ -3,6 +3,8 @@ pageable: true
 per_page: 6
 blog: visualizations
 layout: site_page
+title: Visualizations
+description: A gallery of select visualizations from Misapplied Math
 ---
 
 <% page_articles.each_slice(3) do |visualizations| %>
