--- a/source/archives.html.erb
+++ b/source/archives.html.erb
@@ -3,6 +3,8 @@ pageable: true
 per_page: 10
 blog: blog
 layout: site_page
+title: Archives
+description: A listing of historical Misapplied Math blog posts
 ---
 
 <%= partial('partials/article_list_generator', locals: { page_articles: page_articles }) %>
