--- a/source/blog_posts/2013-12-15-twelve-days-2013-domain-specific-search-and-sort.html.markdown.erb
+++ b/source/blog_posts/2013-12-15-twelve-days-2013-domain-specific-search-and-sort.html.markdown.erb
@@ -4,7 +4,7 @@ date: 2013-12-15 17:30
 comments: true
 tags: CS
 keywords: "interpolation search radix sort fast integer sort domain specific search sort"
-description: "Accelerated search and sort for algorithms for special use cases." 
+description: "Accelerated search and sort for algorithms for special use cases" 
 ---
 
 ## Day Four: Domain Specific Search and Sorting Algorithms
